--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -59,7 +59,7 @@
     <string name="end_ride">ভাড়া সমাপ্ত কৰক</string>
     <string name="reached_destination">পাবলিগয়া ন্থান</string>
     <string name="distance">দূৰত্ব</string>
-    <string name="wait_time">ৰখি থকা সযয়</string>
+    <string name="wait_time">চোনগেসতিোন তিমে</string>
     <string name="fare">ভাড়া</string>
     <string name="accept_ride">ভাড়াটো একচেপ্ত কৰক</string>
     <string name="cancel_ride">ভাড়া কেনচল</string>
