--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
@@ -156,7 +156,7 @@
 
     <string name="distance">Distance</string>
 
-    <string name="wait_time">Temps d\'attente </string>
+    <string name="wait_time">Temps de congestion</string>
 
     <string name="fare">Tarifs</string>
 
