--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -73,7 +73,7 @@
 
 	<string name="reached_destination">गंतव्य पर पहुंच गए</string>
 	<string name="distance">फासला</string>
-	<string name="wait_time">प्रतीक्षा समय</string>
+	<string name="wait_time">भीड़ का समय</string>
 	<string name="fare">किराया</string>
 
 
