--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -66,7 +66,7 @@
     <string name="distance">ദൂരം</string>
     <string name="wait_time">വേടിംഗ് ടൈം</string>
     <string name="fare">ചാർജ്  </string>
-    <string name="accept_ride">റൈഡ് സ്വീകരിക്കുക</string>
+    <string name="accept_ride">തിരക്ക് സമയം</string>
     <string name="cancel_ride">റൈഡ് റദ്ദാക്കുക</string>
     <string name="call">വിളിക്കുക</string>
     <string name="ride_time">റൈഡ് സമയം </string>
