--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -57,7 +57,7 @@
     <string name="end_ride">ಸವಾರಿ ಮುಕ್ತಾಯಗೊಳಿಸಿ</string>
     <string name="reached_destination">ಗಮ್ಯಸ್ಥಾನ ತಲುಪಿದೆ</string>
     <string name="distance">ದೂರ</string>
-    <string name="wait_time">ಸಮಯ ನಿರೆಕ್ಷೆ</string>
+    <string name="wait_time">ದಟ್ಟಣೆ ಸಮಯ</string>
     <string name="fare">ಶುಲ್ಕ</string>
     <string name="accept_ride">ಸವಾರಿಯನ್ನು ಸ್ವೀಕರಿಸಿ</string>
     <string name="cancel_ride">ಸವಾರಿ ರದ್ದು</string>
