--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -58,7 +58,7 @@
     <string name="end_ride">ରାଇଡ୍ ଶେଷ କରନ୍ତୁ</string>
     <string name="reached_destination">ପଂହଚିବା ସ୍ତାନ</string>
     <string name="distance">ଦୁରତା</string>
-    <string name="wait_time">ଅପେକ୍ଷା ସମୟ</string>
+    <string name="wait_time">କଂଗେସସନ ର୍ଟମେ</string>
     <string name="fare">ଭଡ଼ା ପଇସା</string>
     <string name="accept_ride">ରାଇଡ୍ ଗ୍ରହଣ</string>
     <string name="cancel_ride">କ୍ୟାନ୍ସଲ୍ ରାଇଡ୍</string>
