--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
 
     <string name="reached_destination">Reached Destination</string>
     <string name="distance">Distance</string>
-    <string name="wait_time">Wait Time</string>
+    <string name="wait_time">Congestion Time</string>
     <string name="fare">Fare</string>
 
     <string name="accept_ride">Accept Ride</string>
@@ -515,7 +515,7 @@
     <string name="commission_to_be_deposited">Commission to be deposited</string>
     <string name="trips">TRIPS</string>
     <string name="home">Home</string>
-    <string name="duration">DURATION</string>
+    <string name="duration">Duration</string>
     <string name="daily_earnings">DAILY EARNINGS</string>
     <string name="Invoices_cap">INVOICES</string>
     <string name="Today_earning">TODAY\'S EARNING</string>
@@ -1130,7 +1130,7 @@
     <string name="my_rates">My Rates</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="edit_rate_card">Edit Rate Card</string>
-    <string name="wait_time_per_min">Wait Time (per min)</string>
+    <string name="wait_time_per_min">Congestion Time (per min)</string>
     <string name="number_00">00</string>
     <string name="please_complete_your_profile">Please complete your profile and setup your Rate Card to start driving with %s</string>
     <string name="upload_documents">Upload Documents</string>
