From:- wl_liivri: notification in locale managed, added darija strings, Rate your customer views disabled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ar/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ar/strings.xml
@@ -692,6 +692,8 @@
     <string name="edit">تصحيح</string>
     <string name="configure_your_emergency_contacts">جهة اتصال للطوارئ
 تكوين الخاص بك</string>
+    <string name = "app_needs_overlay_permission"> يحتاج التطبيق إلى إذن تراكب لعرض زر المساعد على الشاش</string>
+
     <!--login with phone-->
 
 </resources>
