--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1292,4 +1292,12 @@
     <string name="please_select_fleet">Please select fleet</string>
     <string name="select_ringtone">Select Ringtone</string>
     <string name="ringtone1">Ringtone 1</string>
+    <string-array name="ownership">
+        <item>Rented</item>
+        <item>Owned</item>
+    </string-array>
+    <string name="ownership_status">Ownership status</string>
+    <string name="your_vehicles">Your Vehicles</string>
+    <string name="title_activity_vehicle_details">VehicleDetailsActivity</string>
+
 </resources>
