f_driver_plans: only cash and long rides toggle

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -772,6 +772,8 @@
     <string name="select_ringtone">रिंगटोन का चयन करें</string>
     <string name="share_via_whatsapp">व्हाट्सएप के जरिए शेयर करें</string>
     <string name="view_more_sharing_options">शेयर करने के लिए और विकल्प देखें</string>
+    <string name = "only_cash_rides">केवल कैश राइड्स</string>
+    <string name="only_long_rides">केवल लंबी सवारी</string>
 
 
 
