document uploading bug fixed, more changes done

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1299,5 +1299,7 @@
     <string name="ownership_status">Ownership status</string>
     <string name="your_vehicles">Your Vehicles</string>
     <string name="title_activity_vehicle_details">VehicleDetailsActivity</string>
+    <string name="select_vehicle">Select a Vehicle</string>
+
 
 </resources>
