--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1301,4 +1301,5 @@
     <string name="only_cash_rides">Only Cash Rides</string>
     <string name="only_long_rides">Only Long Rides</string>
     <string name="we_are_unable_to_process_your_request">We are unable to process your request at this time. Please try again later.</string>
+    <string name="please_install_whatsapp">Please install Whatsapp</string>
 </resources>
