--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1303,7 +1303,7 @@
     <string name="we_are_unable_to_process_your_request">We are unable to process your request at this time. Please try again later.</string>
     <string name="please_install_whatsapp">Please install Whatsapp</string>
     <string name="title_activity_destination_ride">DestinationRideActivity</string>
-    <string name="dest_ride">Destination Ride</string>
+    <string name="dest_ride">Destination trip</string>
     <string name="set_destination">Set Destination</string>
     <string name="disable">Disable</string>
     <string name="dest_trip">Destination Trip</string>
