--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1317,6 +1317,7 @@
     <string name="view_more_sharing_options">View more sharing options</string>
     <string name="only_cash_rides">Only Cash Rides</string>
     <string name="only_long_rides">Only Long Rides</string>
+    <string name="vehicle_gps">Vehicle Gps</string>
     <string name="we_are_unable_to_process_your_request">We are unable to process your request at this time. Please try again later.</string>
     <string name="service_un_available_msg">Our service is currently unavailable. Reach out for us between %s</string>
     <string name="please_select_gender">Please select gender</string>
