--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1081,6 +1081,7 @@
     <string name="permissions_title">Grant permission to access %s</string>
     <string name="permissions_location_phone">Location and Phone identity</string>
     <string name="permissions_location">Location</string>
+    <string name="permissions_location_in_background">Location in background</string>
     <string name="permissions_phone">Phone identity</string>
     <string name="grant_permission">Grant Permission</string>
     <string name="no_payment_methods_available">No payment methods available as yet.</string>
@@ -1363,6 +1364,8 @@
     <string name="title_activity_vehicle_details">VehicleDetailsActivity</string>
     <string name="select_vehicle">Select a Vehicle</string>
     <string name="remove_vehicle_warning">Are you sure you want to delete this vehicle.You wont\'t be able to use this vehicle anymore.Continue ?</string>
+    <string name="app_requires_read_contacts_permission_title">App requires Read Contacts Permission</string>
+    <string name="app_requires_read_contacts_permission_message">This will enable you to add your selected contacts to emergency contacts.\nYou can inform these contacts about your current location every time you take ride, or in case of any emergency.\nHowever, do note that these selected contacts will be uploaded to our server for a seamless experience.</string>
 
 
 </resources>
