--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1372,6 +1372,7 @@
 
     <!--low wallet balance-->
     <string name="alert_low_wallet_balance">Wallet Balance is low. Credit your Wallet to receive requests.</string>
+    <string name="low_balance_for_manual">Wallet Balance is low. Credit your Wallet to start manual ride.</string>
 
     <!--alert msg for max toll amount-->
     <string name="enter_amount_less_than">Please enter amount less than or equal to %s</string>
