--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1026,6 +1026,8 @@
     <string name="privacy_policy">Privacy Policy</string>
     <string name="who_are_we">Who are we?</string>
     <string name="facebook_not_installed">Facebook app not enabled</string>
+    <string name="facebook_page_id">2014284462197243</string>
+    <string name="facebook_page_url">https://www.facebook.com/TaxiyeGlobal</string>
     <string name="about">About</string>
     <string name="number_should_not_start_with_zero">Phone number should not start with 0</string>
     <string name="please_enter_promo_code">Enter referral code (Optional)</string>
