Cash out and top up display option based on api added, cashout minimum amount alert added, wallet balance refreshing done and cbe and mpesa option commented out in topupoptionselector.

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -367,6 +367,7 @@
     <string name="paytm_transaction">Paytm Transaction</string>
     <string name="phone_no">Phone No.</string>
     <string name="amount">Amount</string>
+    <string name="minimumCashOut">Minimum Cash out amount is 25ETB.</string>
     <string name="selectPartner">Select Partner</string>
     <string name="changed_no_same_as_previous">Changed phone number is same as the previous one
 	</string>
